--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 		</style>
 	</head>
 	<body>
-    <!-- CDN Link to Three.js -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
-		<!--reference your JS file here. Mine looks like below-->
-		<script src="./lib.js"></script>
-		<script src="./index.js"></script>
+	<!--reference your JS file here. Mine looks like below-->
+	<script type="module" src="./index.js"></script>
 	</body>
 </html>
