Working render loop

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Avoid favicon requests with this line -->
+		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Beginning my Three.js Journey</title>
@@ -10,6 +12,7 @@
 		</style>
 	</head>
 	<body>
+    <canvas id="c" tabindex="1"></canvas>
 	<!--reference your JS file here. Mine looks like below-->
 	<script type="module" src="./index.js"></script>
 	</body>
