shifting code from example over to its own folder

--- a/gameEngineExample/index.html
+++ b/gameEngineExample/index.html
@@ -5,7 +5,7 @@
       threejsfundamentals.org/lessons/threejs-game
     </title>
     <meta charset="UTF-8" />
-    <script type="module" src="http://127.0.0.1:8080/src/fundamentals.js"></script>
+    <script src="src/fundamentals.js"></script>
   </head>
 
   <body>
