--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Beginning my Three.js Journey</title>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
+
+		<link rel="stylesheet" href="./src/styles.css">
+
 	</head>
 	<body>
-    <canvas id="c" tabindex="1"></canvas>
-	<!--reference your JS file here. Mine looks like below-->
+	<canvas id="threeCanvas" tabindex="1"></canvas>
+	<div id="debugWrapper">
+		<div id="bg">
+			abcd
+		</div>
+		<div id="fg">
+			1234
+		</div>
+	</div>	<!--reference your JS file here. Mine looks like below-->
 	<script type="module" src="./index.js"></script>
 	</body>
 </html>
