Adding a debugger output to screen

--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 	</head>
 	<body>
 	<canvas id="threeCanvas" tabindex="1"></canvas>
-	<div id="debugWrapper">
-		<div id="bg">
-			abcd
-		</div>
-		<div id="fg">
-			1234
-		</div>
-	</div>	<!--reference your JS file here. Mine looks like below-->
+	<div id="debugWrapper"></div>	
 	<script type="module" src="./index.js"></script>
 	</body>
 </html>
