--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<title>Beginning my Three.js Journey</title>
-
+		<title>Floaty boom boom cubes</title>
 		<link rel="stylesheet" href="./src/styles.css">
-
 	</head>
 	<body>
 	<canvas id="threeCanvas" tabindex="1"></canvas>
