moving the rest  of the game engine stuff into its own folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Floaty boom boom cubes</title>
-		<link rel="stylesheet" href="./src/styles.css">
+		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
 	<canvas id="threeCanvas" tabindex="1"></canvas>
