--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<title>Floaty boom boom cubes</title>
+		<title>Three.js game engine project</title>
 		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
