--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 		<!-- Avoid favicon requests with this line -->
 		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 		<meta charset=utf-8>
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <!-- TODO: supposedly stops zoom, although still seem to be able to do it -->
+    <meta name="viewport" content="user-scalable=no, 
+                                    initial-scale=1, 
+                                    maximum-scale=1, 
+                                    minimum-scale=1, 
+                                    width=device-width, 
+                                    height=device-height, 
+                                    target-densitydpi=device-dpi" />
 		<title>Three.js game engine project</title>
 		<link rel="stylesheet" href="./styles.css">
 	</head>
